--- a/Project Code Framework/graphics_prj.vcxproj.filters
+++ b/Project Code Framework/graphics_prj.vcxproj.filters
@@ -5,9 +5,6 @@
     <ClCompile Include="Actions\AddANDgate2.cpp">
       <Filter>Actions</Filter>
     </ClCompile>
-    <ClCompile Include="Components\AND2.cpp">
-      <Filter>Components</Filter>
-    </ClCompile>
     <ClCompile Include="ApplicationManager.cpp">
       <Filter>Application Manager</Filter>
     </ClCompile>
@@ -146,6 +143,9 @@
     <ClCompile Include="Actions\AddORgate2.cpp">
       <Filter>Actions</Filter>
     </ClCompile>
+    <ClCompile Include="Components\OR2.cpp">
+      <Filter>Components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Defs.H" />
@@ -250,6 +250,9 @@
     </ClInclude>
     <ClInclude Include="Actions\AddORgate2.h">
       <Filter>Actions</Filter>
+    </ClInclude>
+    <ClInclude Include="Components\OR2.h">
+      <Filter>Components</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
