--- a/Project Code Framework/graphics_prj.vcxproj.filters
+++ b/Project Code Framework/graphics_prj.vcxproj.filters
@@ -146,6 +146,12 @@
     <ClCompile Include="Components\OR2.cpp">
       <Filter>Components</Filter>
     </ClCompile>
+    <ClCompile Include="Components\Switch.cpp">
+      <Filter>Components</Filter>
+    </ClCompile>
+    <ClCompile Include="Actions\AddSwitch.cpp">
+      <Filter>Actions</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Defs.H" />
@@ -253,6 +259,12 @@
     </ClInclude>
     <ClInclude Include="Components\OR2.h">
       <Filter>Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Components\Switch.h">
+      <Filter>Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Actions\AddSwitch.h">
+      <Filter>Actions</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
