--- a/Project Code Framework/graphics_prj.vcxproj
+++ b/Project Code Framework/graphics_prj.vcxproj
@@ -138,7 +138,9 @@
     <ClCompile Include="Actions\AddXOR2Gate.cpp" />
     <ClCompile Include="Actions\Copy.cpp" />
     <ClCompile Include="Actions\Cut.cpp" />
+    <ClCompile Include="Actions\Load.cpp" />
     <ClCompile Include="Actions\Paste.cpp" />
+    <ClCompile Include="Actions\Save.cpp" />
     <ClCompile Include="Actions\Select.cpp" />
     <ClCompile Include="AddLabel.cpp" />
     <ClCompile Include="CMUgraphicsLib\auxil.cpp" />
@@ -214,7 +216,9 @@
     <ClInclude Include="Actions\AddXOR2Gate.h" />
     <ClInclude Include="Actions\Copy.h" />
     <ClInclude Include="Actions\Cut.h" />
+    <ClInclude Include="Actions\Load.h" />
     <ClInclude Include="Actions\Paste.h" />
+    <ClInclude Include="Actions\Save.h" />
     <ClInclude Include="Actions\Select.h" />
     <ClInclude Include="AddLabel.h" />
     <ClInclude Include="CMUgraphicsLib\auxil.h" />
