--- a/Project Code Framework/graphics_prj.vcxproj.filters
+++ b/Project Code Framework/graphics_prj.vcxproj.filters
@@ -218,6 +218,12 @@
     <ClCompile Include="simulation.cpp">
       <Filter>Actions</Filter>
     </ClCompile>
+    <ClCompile Include="Actions\Save_Action.cpp">
+      <Filter>Actions</Filter>
+    </ClCompile>
+    <ClCompile Include="Actions\Load_Action.cpp">
+      <Filter>Actions</Filter>
+    </ClCompile>
     <ClCompile Include="Actions\AddConnection.cpp">
       <Filter>Actions</Filter>
     </ClCompile>
@@ -395,13 +401,19 @@
     <ClInclude Include="Components\LED.h">
       <Filter>Components</Filter>
     </ClInclude>
+    <ClInclude Include="simulation.h">
+      <Filter>Actions</Filter>
+    </ClInclude>
     <ClInclude Include="Components\XNOR2.h">
       <Filter>Components</Filter>
     </ClInclude>
     <ClInclude Include="Components\XOR3.h">
       <Filter>Components</Filter>
     </ClInclude>
-    <ClInclude Include="simulation.h">
+    <ClInclude Include="Actions\Save_Action.h">
+      <Filter>Actions</Filter>
+    </ClInclude>
+    <ClInclude Include="Actions\Load_Action.h">
       <Filter>Actions</Filter>
     </ClInclude>
     <ClInclude Include="Actions\AddConnection.h">
