--- a/Project Code Framework/graphics_prj.vcxproj
+++ b/Project Code Framework/graphics_prj.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="Actions\AddXOR2Gate.cpp" />
     <ClCompile Include="Actions\Copy.cpp" />
     <ClCompile Include="Actions\Cut.cpp" />
+    <ClCompile Include="Actions\Delete.cpp" />
     <ClCompile Include="Actions\Load_Action.cpp" />
     <ClCompile Include="Actions\Paste.cpp" />
     <ClCompile Include="Actions\Save_Action.cpp" />
@@ -219,6 +220,7 @@
     <ClInclude Include="Actions\AddXOR2Gate.h" />
     <ClInclude Include="Actions\Copy.h" />
     <ClInclude Include="Actions\Cut.h" />
+    <ClInclude Include="Actions\Delete.h" />
     <ClInclude Include="Actions\Load_Action.h" />
     <ClInclude Include="Actions\Paste.h" />
     <ClInclude Include="Actions\Save_Action.h" />
